# clinvar-data-monitor

./: .env.template  .gitignore  AGENTS.md  CHANGELOG.md  FINAL_STATUS.md  README.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml.template
config/: config.yaml.template  demo_config.yaml  local_test_config.yaml  test_config.yaml
data/: sample_variant_summary.txt
docs/: README.md  architecture.md  configuration.md  development.md
scripts/: run_demo_pipeline.py  run_pipeline.py  test_modules.py  test_s3_integration.py
src/: __init__.py  downloader.py  quality_checker.py  quilt_packager.py
tests/: __init__.py  test_downloader.py  test_pipeline.py  test_quality_checker.py  test_quilt_packager.py
